--- a/IC.ipynb
+++ b/IC.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
     "import tensorflow_datasets as tfds\n",
-    "import json"
+    "import json\n",
+    "import tensorflow_hub as hub"
    ]
   },
   {
@@ -283,6 +284,86 @@
     "train_batches = train_set.shuffle(num_examples_train).batch(batch_size).prefetch(1)\n",
     "test_batches = test_set.shuffle(num_examples_test).batch(batch_size).prefetch(1)\n",
     "validation_batches = validation_set.shuffle(num_examples_validation).batch(batch_size).prefetch(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Build and Train the Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "URL = \"https://tfhub.dev/google/tf2-preview/mobilenet_v2/feature_vector/4\"\n",
+    "\n",
+    "feature_extractor = hub.KerasLayer(URL, input_shape=(IMG_WIDTH, IMG_HEIGHT, 3))\n",
+    "\n",
+    "feature_extractor.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "keras_layer (KerasLayer)     (None, 1280)              2257984   \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 102)               130662    \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 102)               10506     \n",
+      "=================================================================\n",
+      "Total params: 2,399,152\n",
+      "Trainable params: 141,168\n",
+      "Non-trainable params: 2,257,984\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = tf.keras.Sequential([\n",
+    "        feature_extractor,\n",
+    "        tf.keras.layers.Dense(num_classes, activation = 'sigmoid'),\n",
+    "        tf.keras.layers.Dense(num_classes, activation = 'softmax')\n",
+    "])\n",
+    "\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for image_batch, label_batch in train_batches.take(1):\n",
+    "    loss, accuracy = model.evaluate(image_batch, label_batch)\n",
+    "\n",
+    "print('\\nLoss before training: {:,.3f}'.format(loss))\n",
+    "print('Accuracy before training: {:.3%}'.format(accuracy))"
    ]
   },
   {
