feat: Completed sanity check

--- a/IC_1.ipynb
+++ b/IC_1.ipynb
@@ -248,8 +248,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IMG_WIDTH=224\n",
-    "IMG_HEIGHT=224\n",
+    "IMG_WIDTH = 224\n",
+    "IMG_HEIGHT = 224\n",
     "batch_size = 64"
    ]
   },
@@ -263,11 +263,9 @@
     "    \n",
     "    image = tf.image.flip_left_right(image)\n",
     "    \n",
-    "    \n",
-    "    \n",
     "    image = tf.image.convert_image_dtype(image, tf.float32) # Cast and normalize the image to [0,1]\n",
     "    \n",
-    "    image = tf.image.resize(image, [IMG_WIDTH, IMG_HEIGHT])\n",
+    "    image = tf.image.resize(image, [IMG_HEIGHT, IMG_WIDTH])\n",
     "    \n",
     "    return image,label"
    ]
